force-app/main/default/objects/APISetting__c/APISetting__c.object-meta.xml
<CustomObject>
    <label>API Setting</label>
    <nameField>
        <displayFormat>Setting-{000000000}</displayFormat>
        <label>Setting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>