force-app/main/default/objects/APISetting__c/fields/Key_Token__c.field-meta.xml
<CustomField>
    <fullName>Key_Token__c</fullName>
    <label>Key/Token</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>