force-app/main/default/objects/APISetting__c/fields/Key_Token_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Key_Token_Expiry_Date__c</fullName>
    <label>Key/Token Expiry Date</label>
    <type>Date</type>
</CustomField>