force-app/main/default/objects/APISetting__c/fields/Key_Token_Id__c.field-meta.xml
<CustomField>
    <fullName>Key_Token_Id__c</fullName>
    <label>Key/Token Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>